--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
         .box {
             display: inline-block;
-            width: 120px;
+            width: 200px;
             height: 120px;
             margin: 10px;
             border-radius: 12px;
@@ -111,7 +111,7 @@
             { q: "一只狼掉进冰水里变成什么？", a: ["槟榔", "冰狼"] },
             { q: "麒麟到北极变成什么？", a: ["冰淇淋", "冰麒麟"] },
             { q: "什么布剪不断？", a: ["瀑布"] },
-            { q: "9个橙分给13个小朋友，怎么分才公平？", a: ["榨成汁"] },
+            { q: "9个橙分给13个小朋友，怎么分才公平？", a: ["榨汁"] },
             { q: "愚公移山唱什么歌词？", a: ["一闪一闪亮晶晶"] },
             { q: "什么官不领工资还要自掏腰包？", a: ["新郎官"] },
             { q: "铁放外面会生锈，金子呢？", a: ["被偷走", "偷走"] },
@@ -303,3 +303,4 @@
     </script>
 </body>
 </html>
+
