--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         const paperNotes = [
             "叮叮叮，第二天互相指定穿搭要素",
             "你听过蚂蚁...笑吗？你觉得它有几种笑声？",
-            "真心话时间，互相和对方说能接受和异性朋友单独相处的场所",
+            "Boom!!!，这是个空盒哈哈哈哈哈",
             "心愿挑战赛，错误惩罚表，十位数要对，个位数要错，各三次机会，数量多的人获得心愿一个！！！",
             "要不今天你给我讲个冷笑话吧哈哈哈哈哈哈",
             "断句挑战赛，《货拉拉拉不拉拉布拉多拉布拉多拉的多货拉拉就不拉拉布拉多拉的不多货拉拉就拉拉布拉多》",
@@ -303,4 +303,5 @@
     </script>
 </body>
 </html>
+
 
