--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
         // 更新花朵为不同的 7 种
         const flowers = [
-            { name: "梅花", emoji: "❄️", color: "#e67e22" },
+            { name: "雪花", emoji: "❄️", color: "#e67e22" },
             { name: "菊花", emoji: "🌼", color: "#f4d03f" },
             { name: "樱花", emoji: "🌸", color: "#f1948a" },
             { name: "康乃馨", emoji: "🥀", color: "#c0392b" },
@@ -301,3 +301,4 @@
     </script>
 </body>
 </html>
+
