--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             "身体局部照片各一张，让对方猜是什么部位",
             "小公主今天教你一招公共场所放P妙招，“放P的时候一定要说什么烧焦了，这样周围的人就会把你的P吸光”",
             "断句挑战赛2.0，《校服上除了校徽别别别的让你别别别的别别别的你们非别别的》",
-            "boom！！！挑个喜欢的衣服或者裙子吧，我买单！！！"
+            "来一把紧张又刺激的成语接龙吧！！！"
         ];
 
         const quizQuestions = [
@@ -301,4 +301,5 @@
     </script>
 </body>
 </html>
+
 
